--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,7 @@
   color: #294b82;
   font-weight: 800;
   font-size: 30px;
+  text-align: center;
 }
 .contact .child {
   border: #294b82 solid 3px;
@@ -49,10 +50,11 @@
   padding: 10px 20px 10px 20px;
   width: 100px;
   cursor: pointer;
+  margin-left: 30px;
 }
 .download .child {
   padding: 20px 10px 20px 10px;
-  width: 200px;
+  width: 150px;
   height: 50px;
   cursor: pointer;
   margin-left: 20px;
@@ -94,7 +96,7 @@
   color: #294b82;
   font-size: 18px;
   font-weight: 600;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 .home a:hover {
   -webkit-filter: brightness(120%);
@@ -104,3 +106,78 @@
 .download {
   margin: 2em 0;
 }
+
+@media (max-width: 575.98px) {
+  .box h3{
+    font-size: 22px;
+    margin-top: 10px;
+  }
+  .contact .child {
+    width: 90px;
+  }
+  .download .child {
+    width: 130px;
+  }
+  .download .child p{
+    font-size: 15px;
+  }
+  .download .child img{
+    width: 20px;
+  }
+  .home .hme img{
+    width: 50px;
+  }
+ 
+}
+
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .box h3{
+    font-size: 26px;
+    margin-top: 10px;
+  }
+  .contact .child {
+    width: 90px;
+  }
+  .download .child {
+    width: fit-content;
+  }
+  .download .child p{
+    font-size: 15px;
+  }
+  .download .child img{
+    width: 20px;
+  }
+  .home .hme img{
+    width: 50px;
+  }
+ 
+
+}
+
+
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .box h3{
+    font-size: 26px;
+    margin-top: 10px;
+  }
+  .contact .child {
+    width: 95px;
+  }
+  .download .child {
+    width: fit-content;
+  }
+  
+}
+
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+ 
+}
+
+
+@media (min-width: 1200px) {
+  
+}
+
